# jupyterlab-quickopen

./: .copier-answers.yml  .coveragerc  .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml  deploy.yml
binder/: Dockerfile  apt.txt  environment.yml  postBuild  requirements.txt  tutorial.ipynb
config/: jupyterlab_quickopen.json
demo/: README.md  overrides.json  requirements.txt
jupyter-config/: jupyterlab-quickopen.json
jupyter-config/nb-config/: jupyterlab_quickopen.json
jupyterlab_quickopen/: __init__.py  handler.py  handlers.py
schema/: plugin.json
src/: defaultProvider.ts  frontendProvider.ts  handler.ts  index.ts  quickopen.ts  serverProvider.ts  tokens.ts  widget.ts
style/: base.css  index.css
tests/: test_jupyterlab_quickopen.py
